created JavaFX stub